decksite/static/css/pd.css
/* ... */
h1, h2 {
    color: inherit;
}

main h1 {
    font-size: 1.333rem;
    margin-bottom: 2rem;
    padding-top: 2rem;
}

main h2 {
    border-top: 0.05rem solid #502828;
    font-size: 1rem;
    margin-bottom: 2rem;
    margin-top: 1rem;
    padding-top: 1rem;
}

main h1 a:visited, main h2 a:visited {
    color: inherit;
}

/*

Links

Links in tables and the menu are not underlined (although menu highlights on hover).
Links in text are underlined in such a way as to break on descenders like those found in lowercase g and y.

*/

/* We actually want the heading-caps and lowercase behavior exactly where we want the reduced max width
   so somehow combine those things. And highlight on hover too I expect.  Then get rid of exception list below probs. */
a {
    color: inherit;
    font-family: heading-caps;
    text-decoration: none;
    text-transform: lowercase;
}

main a:hover {
    background-color: #eee;
    border-radius: 0.317em;
    transition-duration: 1s;
    transition-property: background;
}

/* There are a lot of places we want undecorated links, though, even in the main content area. */
main table a, main h1 a, main h2 a, main h3 a, main li a, .decklist a {
    font-family: inherit;
    text-transform: none;
}

main table a:hover, main h1 a:hover, main h2 a:hover, main h3 a:hover, main li a:hover, .decklist a:hover {
    background-color: transparent;
}

/* Mark links that go off-site. */
a.external:after {
    background: none;
    content: "﻿↑";
    font-size: 0.75rem;
    position: relative;
    text-decoration: none; /* Although this is a link we don't want the external indicator underlined. */
    text-indent: 0; /* Don't inherit from parent and apply again. */
    text-shadow: none;
    top: -0.6em;
    white-space: pre-wrap;
}

/*

Lists

Our standard lists use a bullet in the left margin.
Text continues to line up with text above/below.

*/

main ul {
    list-style-type: disc;
    padding-left: 2em;
}

ul.decklist {
    list-style-type: none;
    margin: 0;
    padding-left: 0;
    line-height: 1;
    font-size: 0.75rem;
}

/*

Tables

Our tables are constrained to a single line, allow no column to become very large and will clip overflow with an elipsis.
We make occasional use of space in the margin to the left. This is called 'marginalia'.
We fade values that repeat from one row to the next. Tables that do this are hidden until it is complete with the fade-repeats class.

Sizes in the table are in ems because they should relate to the size of table text not the page base.

*/

table {
    border-spacing: 0.25em 0;
    font-size: 0.75rem;
    font-weight: 400;
    margin-bottom: 1em;
}

/* Turn off small caps link style in tables. */
table a {
    font-family: inherit;
    text-transform: none;
}

/* Turn off hover highlight in tables. */
table a:hover {
    background-color: transparent;
}

table.with-marginalia {
    margin-left: -5.126em; /* Width of .marginalia + left-padding + right-padding */
    margin-right: 0.5em;
}

table.fade-repeats {
    visibility: hidden;
}

th {
    cursor: pointer;
    font-family: heading-caps;
    font-size: 1em;
    text-align: left;
    text-transform: lowercase;
}

th, td {
    max-width: 13em;
    overflow: hidden;
    padding: 0.178em 0.563em;
    text-overflow: ellipsis;
    white-space: nowrap;
}

/* Allow elements in the margin to show. */
td.marginalia:first-child, th.marginalia:first-child {
    overflow: visible;
}

/* Align beginning and end of rows with left and right edges of the content area. */
table:not(.with-marginalia) td:first-child, td:last-child, table:not(.with-marginalia) th:first-child, th:last-child, table.with-marginalia th:nth-child(2), table.with-marginalia td:nth-child(2) {
    margin: 0;
    padding: 0;
}


td.c {
    text-align: center;
}

td.n {
    text-align: right;
}

tr.wide td, tr.wide th {
    padding-bottom: 0.5em;
    padding-top: 0.5em;
}

tr.wide+tr td {
    border-top: 0.05rem #999 solid;
}

tr.wide td.wide {
    padding-right: 1em;
    max-width: 50em;
    white-space: pre-line;
}

td.divider, th.divider {
    border-right: 0.07em solid #999;
}

th.legend {
    text-align: center;
}

.marginalia {
    line-height: 1;
    margin-left: -4em;
    margin-right: -0.5em;
    text-align: right;
    width: 4em;
}

.stars {
    font-size: 1.333rem; /* The stars are a bit small in our chosen font but the targets are not. */
}

td.repeat {
    opacity: 0.4;
}

/*

Menu

The main menu consists of a handful of top-level items.
Ideally the number of top-level items will never exceed five.
Menu items can have submenus. These are "mega menus" that stretch across the whole screen and might contain more than just links.

*/

.menu li {
    float: left;
}

.menu li > a {
    display: block;
    padding: 2em; /* Matches negative margin of nav so when it aligns left (even wrapped under). */
    text-decoration: none;
    text-transform: lowercase;
}

.menu > li.search {
    float: right;
    padding: 1rem 0 0 0;
}

.menu a:hover {
    color: #999;
    transition-duration: 1s;
    transition-property: color;
}

.menu:after {
    clear: both;
    content: "";
    display: table;
}

/* Submenu. */

.submenu-container {
    background: #502828;
    color: #f9f9f9;
    display: none;
    left: 0;
    padding: 0 10%; /* Left and right padding same as nav padding because this is position absolutely under the menu. */
    position: absolute;
    width: 80%; /* 100% - padding-left - padding-right */
}

.submenu-container a:hover {
    background-color: #502828;
    color: #999;
}

.submenu-container > ul {
    margin-left: -2rem; /* So that first item text lines up with the left edge of the page. */
}

/* Slide-out caret at top of submenu dropdown. */

/* The caret makes its containing menuitem have a weird outline shape when tabbing so hide outlines in the menu. */
a.menuitem {
    outline: none;
}

.has-submenu > a {
    position: relative; /* So we can position the caret relative to its menuitem. */
}
/* ... */

